# cpp-vcpkg-cmake-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeProject4.cpp  CMakeProject4.h  CMakeSettings.json  CMakeSettings.json.bak  README.md  vcpkg_rf.txt
